[docbook] Fix kernel-api reference to kernel/power/pm.c.

--- a/Documentation/DocBook/kernel-api.tmpl
+++ b/Documentation/DocBook/kernel-api.tmpl
@@ -206,7 +206,7 @@ X!Earch/i386/kernel/mca.c
 
   <chapter id="pmfuncs">
      <title>Power Management</title>
-!Ekernel/pm.c
+!Ekernel/power/pm.c
   </chapter>
 
   <chapter id="blkdev">
